--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "core-js": "^3.8.3",
     "material-icons": "^1.11.2",
     "vue": "^3.2.13",
-    "vue-toast-notification": "3.0"
+    "vue-toast-notification": "3.0",
+    "vue3-simple-typeahead": "^1.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
